--- a/Source Code/KTXSV/Views/SinhVien/ChinhSuaThongTin.cshtml
+++ b/Source Code/KTXSV/Views/SinhVien/ChinhSuaThongTin.cshtml
@@ -3,6 +3,4 @@
     ViewBag.Title = "ChinhSuaThongTin";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>ChinhSuaThongTin</h2>
-
+<h2> chỉnh sửa thông tin</h2>
