--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -9,19 +9,17 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-</head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav  class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid d-flex align-items-center">
             <a class="navbar-brand d-flex align-items-center" href="/">
                 <img width="150" src="https://huflit.edu.vn/wp-content/uploads/2023/04/LOGO-HUFLIT-OFFICIAL.png" />
-
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse  justify-content-end align-items-center text-dark" id="navbarNav">
+            <div style="color:black" class="collapse navbar-collapse  justify-content-end align-items-center text-dark" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="/Phong/DangKyPhong">Đăng ký phòng</a></li>
@@ -29,9 +27,10 @@
                     <li class="nav-item"><a class="nav-link" href="/ThongBao/ThongBao">Thông báo</a></li>
                     <li class="nav-item"><a class="nav-link" href="/HoTro/LichSu">Hỗ trợ</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle p-0" href="#" id="studentMenu" data-bs-toggle="dropdown">
-                            <button class="btn btn-primary ms-2" style="border-radius:20px">Trang cá nhân</button>
-                        </a>
+                        <button class="btn btn-outline-dark dropdown-toggle ms-2" id="studentMenu"
+                                data-bs-toggle="dropdown" aria-expanded="false" style="border-radius:20px">
+                            Trang cá nhân
+                        </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="studentMenu">
                             <li><a class="dropdown-item" href="/SinhVien/ThongTinCaNhan">Thông tin cá nhân</a></li>
                             <li><a class="dropdown-item" href="/SinhVien/ChinhSuaThongTin">Chỉnh sửa thông tin</a></li>
@@ -58,7 +57,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+
 </body>
 </html>
