--- a/Source Code/KTXSV/Content/Site.css
+++ b/Source Code/KTXSV/Content/Site.css
@@ -23,7 +23,7 @@ body {
 
 main {
     flex: 1;
-    margin-bottom:16px
+    margin-bottom: 16px;
 }
 
 :root {
@@ -34,7 +34,7 @@ html, body {
     font-family: var(--font-family-system);
     font-size: 16px;
     color: #000;
-    height:100%;
+    height: 100%;
 }
 
 .navbar .nav-link {
