--- a/Source Code/KTXSV/Views/Home/Index.cshtml
+++ b/Source Code/KTXSV/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
             </button>
         </div>
     <h2 class="mt-5">Giới thiệu</h2>
-    <section class="bg-light p-4 rounded-4 shadow-sm">
+    <section class="bg-white p-4 rounded-4 shadow-sm">
         <h2 class="fw-bold mb-3">📞 Liên hệ quản lý ký túc xá</h2>
         <p><strong>Địa chỉ:</strong> 828 Sư Vạn Hạnh, Phường 13, Quận 10, TP. Hồ Chí Minh</p>
         <p><strong>Email:</strong> ktx@huflit.edu.vn</p>
