--- a/Source Code/KTXSV/Views/Phong/DanhSachPhong.cshtml
+++ b/Source Code/KTXSV/Views/Phong/DanhSachPhong.cshtml
@@ -6,6 +6,14 @@
 }
 
 <main class="container my-5">
+    @if (TempData["Success"] != null)
+            {
+                <div class="alert alert-success text-center">@TempData["Success"]</div>
+            }
+    @if (TempData["Error"] != null)
+            {
+                <div class="alert alert-danger  text-center">@TempData["Error"]</div>
+            }
     <h1 class="text-center fw-bold mb-4" style="color:#EE6823">Danh sách phòng đã đăng ký</h1>
 
     @if (!Model.Any())
@@ -16,9 +24,9 @@
     }
     else
     {
-        foreach (var item in Model)
+        foreach (var item in Model.Reverse())
         {
-            <div class="rounded-4 shadow-sm p-4 mb-3 border-start border-4 border-warning-subtle">
+            <div class="rounded-4 bg-white shadow-sm p-4 mb-3 border-start border-4 border-warning-subtle">
                 <div class="row">
                     <div class="col-md-4">
                         <p><strong>Tòa nhà:</strong> @item.Room.Building</p>
@@ -50,8 +58,12 @@
                         {
                             <span class="badge bg-secondary">Đã kết thúc</span>
                         }
+                        else if (item.Status == "Canceled")
+                        {
+                            <span class="badge bg-danger-subtle">Đã hủy</span>
+                        }
 
-                        @* Chỉ hiển thị nút hủy nếu đang chờ duyệt *@
+
                         @if (item.Status == "Pending")
                         {
                             using (Html.BeginForm("HuyDangKy", "Phong", FormMethod.Post, new { onsubmit = "return confirm('Bạn có chắc muốn hủy đăng ký này không?');" }))
