--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg bg-white shadow-sm  rounded-4 px-4 ">
-        <div class="container-fluid d-flex align-items-center ms-0" >
+        <div class="container-fluid d-flex align-items-center ms-0">
             <a class="navbar-brand d-flex align-items-center" href="/">
                 <img width="150" src="https://huflit.edu.vn/wp-content/uploads/2023/04/LOGO-HUFLIT-OFFICIAL.png" />
             </a>
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNav">
                 <ul class="navbar-nav align-items-center">
                     <li class="nav-item"><a class="nav-link text-dark" href="/">Trang chủ</a></li>
-                 
+
                     <li class="nav-item"><a class="nav-link text-dark" href="/StudentFiles/Index">Đăng ký phòng mới</a></li>
 
                     <li class="nav-item"><a class="nav-link text-dark" href="/Phong/DanhSachPhong">Phòng đã đăng ký</a></li>
@@ -71,6 +71,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     @RenderSection("scripts", required: false)
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </body>
 </html>
